<resources>
    <string name="app_name">Teen Patti</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="fb_login">Login with Facebook</string>
    <string name="gplay_login">Login with Google</string>
    <string name="guest">Play as Guest</string>
    <string name="orMsg">OR USE</string>
    <string name="dialogHint">Enter Your Name</string>
    <string name="done">DONE</string>
    <string name="cancel">CANCEL</string>
    <string name="logout">Log Out</string>
    <string name="admin">Admin</string>
    <string name="buy">Buy Chips</string>
    <string name="back">Back</string>
    <string name="teenPatti">3 Patti</string>
    <string name="noLimit">No Limit</string>
    <string name="joker">Joker</string>
    <string name="payMsg">*make sure you installed any UPI based payment application on your device</string>
    <string name="close">X</string>
    <string name="adminPanel">Admin Panel</string>
    <string name="newGame">New Game</string>
    <string name="viewGame">View Game</string>
    <string name="payButton">CONFIRM PAYMENT</string>
    <string name="selectorHint">Select Game</string>
    <string name="getGame">Generate Game ID</string>
    <string name="see">SEE</string>
    <string name="pack">PACK</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="chal">BLIND</string>
    <string name="loading">Loading.....</string>
    <string name="noLimitEntry">Entry : 200 Coins</string>
    <string name="jokerEntry">Entry : 500 Coins</string>
    <string name="accept">Accept</string>
    <string name="deny">Decline</string>
    <string name="sideShowReq">Side Show\nRequested</string>
    <string name="viewCard">View\nCards</string>
    <string name="show">SHOW</string>
    <string name="viewGames">View Games</string>
    <string name="lost">You Lost</string>
    <string name="pot">Pot Amount : </string>
    <string name="bot">Bot Amount</string>
    <string name="gameStat">Game Status :</string>
    <string name="noResponse">No Data Found!!!</string>
    <string name="info">Game Info</string>
    <string name="winner">Winner Details :</string>
    <string name="coins">Coins : </string>
</resources>
